# gonhanh.org

./: Makefile  README.md  docs-manager-250209-summary.md  package.json  repomix-output.xml
.github/: drafter.yml
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: ci.yml  pre-release.yml  release.yml
core/: Cargo.toml
core/src/: lib.rs  utils.rs
core/src/data/: chars.rs  vowel.rs
core/src/engine/: buffer.rs  mod.rs  shortcut.rs  validation.rs
core/src/input/: mod.rs
core/tests/: auto_restore_dynamic_test.rs  bug_reports_test.rs  engine_test.rs  english_auto_restore_test.rs  english_auto_restore_toggle_test.rs  integration_test.rs  permutation_test.rs  typing_test.rs  unit_test.rs  word_test.rs
docs/: README.md  architecture.md  code-standards.md  codebase-summary.md  common-issues.md  development.md  project-overview-pdr.md  system-architecture.md  vietnamese-language-system.md
scripts/: generate-release-notes.sh  install-linux.sh  test-typing.swift
