[package]
name = "gonhanh-core"
version = "0.1.0"
edition = "2021"
authors = ["Kha Phan <nhatkha1407@gmail.com>"]
license = "GPL-3.0-or-later"
description = "Gõ Nhanh - Vietnamese input method core engine"
repository = "https://github.com/khaphanspace/gonhanh.org"

[lib]
name = "gonhanh_core"
crate-type = ["staticlib", "cdylib", "rlib"]  # Add rlib for tests

[dependencies]
# Minimal dependencies for core engine

[dev-dependencies]
rstest = "0.18"

[profile.release]
opt-level = "z"          # Optimize for size
lto = true               # Link-time optimization
codegen-units = 1        # Better optimization
strip = true             # Strip symbols
panic = "abort"          # Smaller binary
